# rshell

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: builtins.c.151A2AE28D0023CE.idx  builtins.h.A2985932FFFBBAE4.idx  exec.c.1A89443E2EA7E288.idx  exec.h.3CFB2751C441CFDD.idx  list.c.FA29A7DCFA8D11EC.idx  list.h.8D5008720D9561F1.idx  readline.c.52CEF82DCAA2C7A3.idx  readline.h.7249DAD99F056023.idx  shell.c.198E33E92A677AAC.idx  term.c.1824AFBC6926C0C7.idx  term.h.8B25AD33CD9BE937.idx  tokenize.c.EDBBA3D7E5EE3459.idx  tokenize.h.6F9CCB1D854BA127.idx
src/: Makefile  compile_commands.json  out.txt  shell.c  shellback.c  shellback2.c
src/.cache/clangd/index/: shell.c.198E33E92A677AAC.idx
src/exec/: exec.c  exec.h
src/exec/builtins/: builtins.c  builtins.h
src/list/: list.c  list.h
src/parser/: parser.c  parser.h
src/readline/: readline.c  readline.h
src/readline.plist/: report-eba235.html
src/term/: term.c  term.h
src/tokenize/: tokenize.c  tokenize.h
src/util/: util.c  util.h
